--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.15.2
 gunicorn==23.0.0
 idna==3.10
 packaging==25.0
+psycopg2-binary==2.9.10
 requests==2.32.3
 soupsieve==2.7
 sqlparse==0.5.3
